Add updated TPL1.1 data and code from @ejforrestel
Fixes #6. From Beth's email, 2014-04-06: Attached is a zip file with the final synonymy list, the corrected names_accepted.csv and names_unique.csv, as well as the code I used.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-/scripts/.Rhistory
+# R code ignores
+*.Rhistory
+*.Rdata
+*.DS_Store
+*.Rapp.history
+
+# specific ignroes, intermediate files
 /theplantlist1.1/tpl_make_compact_flymake.py
