--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@ data
 *.DS_Store
 *.Rapp.history
 
-# specific ignroes, intermediate files
+# python
+*.pyc
+
+# specific ignores, intermediate files
 /theplantlist1.1/tpl_make_compact_flymake.py
